[metadata]
name = unitypack
version = 0.9.0
description = Python implementation of the .unity3d format
author = Jerome Leclanche
author_email = jerome@leclan.ch
url = https://github.com/HearthSim/UnityPack
download_url = https://github.com/HearthSim/UnityPack/tarball/master
classifiers =
	Development Status :: 4 - Beta
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.6
	Topic :: Multimedia :: Graphics

[options]
packages = find:
scripts =
	bin/unityextract
	bin/unity2yaml

install_requires =
	decrunch
	fsb5
	lz4
	Pillow

[options.package_data]
unitypack = classes.json, strings.dat, structs.dat
