[metadata]
name = unitypack
version = 0.9.1a0
description = Python implementation of the .unity3d format
author = nago <nago@malie.io>, Jerome Leclanche <jerome@leclan.ch>
author_email = nago@malie.io
url = https://gitlab.com/malie-library/unitypack
download_url = https://gitlab.com/malie-library/unitypack/-/archive/master/unitypack-master.tar.gz
classifiers =
	Development Status :: 4 - Beta
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.6
	Topic :: Multimedia :: Graphics

[options]
packages = find:
scripts =
	bin/unityextract
	bin/unity2yaml

install_requires =
	decrunch
	fsb5
	lz4
	Pillow

[options.package_data]
unitypack = classes.json, strings.dat, structs.dat
